--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     - name: Jenkins build
       with:
          jenkins-url: 'http://52.14.62.107:8080/'
-         token: ${{ secrets.mytoken }}
+         token: ${{ secrets.MYTOKEN }}
          job-name: 'mul-br'
          
       
