--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,11 @@ jobs:
          jenkins-user: 'admin'
          jenkins-token: ${{ secrets.MYTOKEN }}
          job-name: 'mul-br'
-         
+    - name: Build and test
+      run: |
+        curl -X POST -u " 11dd4f8085055bba9af35e07a7f19501eb" http://52.14.62.107:8080/job/mul-br/ 
       
-    
+     
+      
+  
     
